package com.narxoz.rpg.decorator;

public class CriticalFocusDecorator extends ActionDecorator {
    public CriticalFocusDecorator(AttackAction wrappedAction) {
        super(wrappedAction);
    }

    @Override
    public String getActionName() {
        return super.getActionName() + " [Critical]";
    }

    @Override
    public int getDamage() {
        return super.getDamage() * 2;
    }

    @Override
    public String getEffectSummary() {
        return super.getEffectSummary() + " | Critical strike: damage doubled";
    }
}
